<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/firstPageFragment">

    <fragment
        android:id="@+id/firstPageFragment"
        android:name="com.example.baksomanagementadmin.ui.FirstPageFragment"
        android:label="First Page">

        <action
            android:id="@+id/action_firstPageFragment_to_registerFragment"
            app:destination="@id/registerFragment"/>

        <action
            android:id="@+id/action_firstPageFragment_to_loginFragment"
            app:destination="@id/loginFragment"/>

    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.baksomanagementadmin.ui.RegisterFragment"
        android:label="Register">

        <action
            android:id="@+id/action_registerFragment_to_firstPageFragment"
            app:destination="@id/firstPageFragment" />

    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.baksomanagementadmin.ui.LoginFragment"
        android:label="Login">

        <action
            android:id="@+id/action_loginFragment_to_homepageFragment"
            app:destination="@id/homepageFragment" />

        <action
            android:id="@+id/action_loginFragment_to_lupaPasswordFragment"
            app:destination="@id/lupaPasswordFragment" />

        <action
            android:id="@+id/action_loginFragment_to_firstPageFragment"
            app:destination="@id/firstPageFragment" />

    </fragment>

    <fragment
        android:id="@+id/lupaPasswordFragment"
        android:name="com.example.baksomanagementadmin.ui.LupaPasswordFragment"
        android:label="Lupa Password"/>

    <fragment
        android:id="@+id/homepageFragment"
        android:name="com.example.baksomanagementadmin.ui.HomepageFragment"
        android:label="Homepage">
        <action
            android:id="@+id/action_homepageFragment_to_addMenuFragment"
            app:destination="@id/menu_add_makanan"/>
        <action
            android:id="@+id/action_homepageFragment_to_detailMenuFragment"
            app:destination="@id/menu_detail_makanan"/>
        <action
            android:id="@+id/action_homepageFragment_to_editMenuFragment"
            app:destination="@id/menu_edit_makanan"/>
        <action
            android:id="@+id/action_homepageFragment_to_addBahanBakuFragment"
            app:destination="@id/menu_add_bahan_baku"/>
        <action
            android:id="@+id/action_homepageFragment_to_editBahanBakuFragment"
            app:destination="@id/menu_edit_bahan_baku"/>
    </fragment>

    <fragment
        android:id="@+id/menu_bahanBaku"
        android:name="com.example.baksomanagementadmin.ui.BahanBakuFragment"
        android:label="@string/menu_bahanBaku"
        tools:layout="@layout/fragment_bahan_baku">
        <action
            android:id="@+id/action_bahanBakuFragment_to_addBahanBakuFragment"
            app:destination="@id/menu_add_bahan_baku"/>
        <action
            android:id="@+id/action_bahanBakuFragment_to_editBahanBakuFragment"
            app:destination="@id/menu_edit_bahan_baku"/>
    </fragment>

    <fragment
        android:id="@+id/menu_setting"
        android:name="com.example.baksomanagementadmin.ui.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting"/>

    <fragment
        android:id="@+id/menu_weekly_insight"
        android:name="com.example.baksomanagementadmin.ui.WeeklyInsightFragment"
        android:label="@string/menu_weekly_insight"
        tools:layout="@layout/fragment_weekly_insight"/>

    <fragment
        android:id="@+id/menu_about_us"
        android:name="com.example.baksomanagementadmin.ui.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us"/>

    <fragment
        android:id="@+id/menu_account"
        android:name="com.example.baksomanagementadmin.ui.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account"/>

    <fragment
        android:id="@+id/menu_add_makanan"
        android:name="com.example.baksomanagementadmin.ui.AddMenuFragment"
        android:label="@string/menu_add_makanan"
        tools:layout="@layout/fragment_add_menu"/>

    <fragment
        android:id="@+id/menu_add_bahan_baku"
        android:name="com.example.baksomanagementadmin.ui.AddBahanBakuFragment"
        android:label="@string/menu_add_bahan_baku"
        tools:layout="@layout/fragment_add_bahan_baku"/>

    <fragment
        android:id="@+id/menu_edit_bahan_baku"
        android:name="com.example.baksomanagementadmin.ui.EditBahanBakuFragment"
        android:label="@string/menu_edit_bahan_baku"
        tools:layout="@layout/fragment_edit_bahan_baku"/>

    <fragment
        android:id="@+id/menu_detail_makanan"
        android:name="com.example.baksomanagementadmin.ui.DetailMenuFragment"
        android:label="@string/menu_detail_makanan"
        tools:layout="@layout/fragment_detail_menu">
        <action
            android:id="@+id/action_menuDetailFragment_to_editMenuFragment"
            app:destination="@id/menu_edit_makanan"/>
    </fragment>

    <fragment
        android:id="@+id/menu_edit_makanan"
        android:name="com.example.baksomanagementadmin.ui.EditMenuFragment"
        android:label="@string/menu_edit_makanan"
        tools:layout="@layout/fragment_edit_menu"/>

    <fragment
        android:id="@+id/menu_add_on"
        android:name="com.example.baksomanagementadmin.ui.AddOnFragment"
        android:label="@string/menu_add_on"
        tools:layout="@layout/fragment_add_on">
        <action
            android:id="@+id/action_addOnFragment_to_tambahAddOnFragment"
            app:destination="@id/menu_tambah_add_on"/>
        <action
            android:id="@+id/action_addOnFragment_to_editAddOnFragment"
            app:destination="@id/menu_edit_add_on"/>
    </fragment>

    <fragment
        android:id="@+id/menu_tambah_add_on"
        android:name="com.example.baksomanagementadmin.ui.TambahAddOnFragment"
        android:label="@string/menu_tambah_add_on"
        tools:layout="@layout/fragment_tambah_add_on"/>

    <fragment
        android:id="@+id/menu_edit_add_on"
        android:name="com.example.baksomanagementadmin.ui.EditAddOnFragment"
        android:label="@string/menu_edit_add_on"
        tools:layout="@layout/fragment_edit_add_on"/>

    <fragment
        android:id="@+id/menu_history"
        android:name="com.example.baksomanagementadmin.ui.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history">
    </fragment>

    <fragment
        android:id="@+id/menu_favourite"
        android:name="com.example.baksomanagementadmin.ui.FavouriteFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_favourite"/>

    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.example.baksomanagementadmin.ui.NotificationFragment"
        android:label="@string/notificationFragment"
        tools:layout="@layout/fragment_notification">
        <action
            android:id="@+id/action_notificationFragment_to_detailOrderanFragment"
            app:destination="@id/detailOrderanFragment"/>
    </fragment>

    <fragment
        android:id="@+id/detailOrderanFragment"
        android:name="com.example.baksomanagementadmin.ui.DetailOrderanFragment"
        android:label="@string/detailOrderanFragment"
        tools:layout="@layout/fragment_detail_orderan"/>

</navigation>